<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@color/White">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <FrameLayout android:id="@+id/spaceCol1" android:layout_width="64dp" android:layout_height="50dp"></FrameLayout>
            <FrameLayout android:id="@+id/spaceCol2" android:layout_width="64dp" android:layout_height="50dp"></FrameLayout>
            <FrameLayout android:id="@+id/spaceCol3" android:layout_width="64dp" android:layout_height="50dp"></FrameLayout>
            <FrameLayout android:id="@+id/spaceCol4" android:layout_width="64dp" android:layout_height="50dp"></FrameLayout>
            <FrameLayout android:id="@+id/spaceCol5" android:layout_width="64dp" android:layout_height="50dp"></FrameLayout>

        </TableRow>
        <TableRow
            android:id="@+id/tableRowOnOffButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off" 
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowSpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <FrameLayout android:id="@+id/rowSpan"  android:layout_height="50dp"></FrameLayout>

        </TableRow>
        <TableRow
            android:id="@+id/tableRowScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextScalePercents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_column="1" 
                android:text="@string/defaultScale">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btnScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale" 
                android:layout_column="3"/>

        </TableRow>
        
        <RadioGroup
       		android:id="@+id/groupLamps"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

       		<RadioButton
            	android:id="@+id/radioLamp1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lamp1" 
            	android:textColor="@color/Black"/>
        	<RadioButton
            	android:id="@+id/radioLamp2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lamp2" 
            	android:textColor="@color/Black"/>
        	<RadioButton
            	android:id="@+id/radioLamp3"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lamp3" 
            	android:textColor="@color/Black"/>
        	<RadioButton
            	android:id="@+id/radioLamp4"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/lamp4" 
            	android:textColor="@color/Black"/>
    	</RadioGroup>
        
        

    </TableLayout>
